<resources>
    <string name="app_name">Home work 4 part 1</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fragment_a">Fragment A</string>
    <string name="go_to_b">Go to B</string>
    <string name="fragment_b">Fragment B</string>
    <string name="back_to_a">Back to A</string>
    <string name="go_to_c">Go to C</string>
    <string name="default_text">Default text</string>
    <string name="go_to_d">Go to D</string>
    <string name="go_to_a">Go to A</string>
    <string name="fragment_c">Fragment C</string>
    <string name="fragment_d">Fragment D</string>
    <string name="go_to_b_from_d">Go to B</string>
    <string name="hello_fragment_c">Hello Fragment C</string>
</resources>