<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".FragmentC">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/fragment_c"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/inputTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/default_text"
        android:textSize="18sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnCtoD"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/go_to_d" />

    <Button
        android:id="@+id/btnCtoA"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/go_to_a" />


</LinearLayout>