<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_height="match_parent"
    tools:context=".FragmentB">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fragment_b"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_margin="8dp"/>

    <Button
        android:id="@+id/btnBtoC"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/go_to_c" />

    <Button
        android:id="@+id/btnBbackToA"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back_to_a" />

</LinearLayout>